codebird-cors-proxy - changelog
===============================

1.1.1 (not yet released)

1.1.0 (2013-06-15)
+ Support base64-encoded media uploads

1.0.0 (2013-04-26)
+ Initial release