@@ -2,6 +2,7 @@ codebird-cors-proxy - changelog
 ===============================
 
 1.1.1 (not yet released)
++ Run without PECL HTTP extension
 
 1.1.0 (2013-06-15)
 + Support base64-encoded media uploads
